# PolyDocAI

./: .gitignore  Makefile  README.md  dev.sh  local.env.example
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: documents.py  health.py  router.py  settings.py
backend/app/core/: container.py  device.py  geometry.py  logging.py  settings.py
backend/app/models/: __init__.py  document.py
backend/app/modules/export/: legacy.py  service.py
backend/app/modules/layout/: doclayout_service.py
backend/app/modules/ocr/: geometry.py  ocr_merge.py  paddle_service.py  structure_service.py
backend/app/modules/pipeline/: model_builder.py  orchestrator.py  page_pipeline.py  quality.py
backend/app/modules/preprocessing/: image_extractor.py  language_detector.py  pdf_processor.py  style_analyzer.py
backend/app/modules/reconstruction/: background_builder.py  background_fill.py  engine.py  font_resolver.py  layout_reflow.py  script_fonts.py  style_sync.py  text_compositor.py  text_mask.py  text_residual.py  (+2 more)
backend/app/pipeline/: cache.py  context.py  serializers.py  stage_runner.py  types.py
backend/app/providers/: glossary_repository.py  repository.py
backend/tests/: conftest.py  test_api.py  test_arabic_fonts.py  test_document_model.py  test_font_manager.py  test_geometry.py  test_normalization.py  test_ocr_geometry.py  test_ocr_merge.py  test_pipeline_services.py  test_reconstruction_quality.py  test_semantic_renderers.py  test_serializers.py  test_style_analyzer.py  test_text_compositor.py
(+82 files in other folders)
