[project]
name = "polydoc-backend"
version = "0.1.0"
description = "PolyDoc AI backend — document OCR, translation, and reconstruction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "structlog>=24.4.0",
    "pillow>=11.0.0",
    "pymupdf>=1.24.0",
    "opencv-python-headless>=4.10.0",
    "numpy>=1.26.0",
    "reportlab>=4.2.0",
    "python-docx>=1.1.0",
    "arabic-reshaper>=3.0.0",
    "python-bidi>=0.6.0",
    "sse-starlette>=2.1.0",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
ml = [
    "paddleocr>=2.9.0",
    "paddlepaddle>=2.6.0",
    "doclayout-yolo>=0.0.4",
    "torch>=2.2.0",
    "huggingface-hub>=0.26.0",
    "argostranslate>=1.9.0",
]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.7.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
